INFLERN/ingress/canaryUpgrade/appV1.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-v1
  labels:
    app: v1
spec:
  containers:
    - name: container
      image: kubetm/app:v1
---

apiVersion: v1
kind: Service
metadata:
  name: svc-v1
spec:
  selector:
    app: v1
  ports:
    - port: 8080
