INFLERN/ingress/canaryUpgrade/appV2.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-v2
  labels:
    app: v2
spec:
  containers:
    - name: container
      image: kutetm/app:v2
---

apiVersion: v1
kind: Service
metadata:
  name: svc-v2
spec:
  selector:
    app: v2
  ports:
    - port: 8080
