INFLERN/ingress/canaryUpgrade/ingress-default.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
spec:
  ingressClassName: nginx
  rules:
    - host: www.app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-v1
                port:
                  number: 8080
